# sharpside

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml
.devcontainer/: Dockerfile  devcontainer.json
apps/admin/: Cargo.toml
apps/admin/src/: auth.rs  config.rs  error.rs  main.rs  routes.rs  state.rs
apps/admin/static/: index.html  main.js  router.js
apps/admin/static/api/: admin.js  client.js
apps/admin/static/components/: nav.js  ui.js
apps/admin/static/pages/: audit-thresholds.js  category-mapping.js  hot-wallets.js  identities.js  login.js  mappings.js  shadow-health.js  tag-rules.js  visibility.js
apps/admin/static/store/: auth.js  toast.js
apps/admin/static/styles/: base.css  tokens.css
apps/daemon/: Cargo.toml
apps/daemon/src/: config.rs  main.rs  sign.rs  ui.rs
apps/tg-bot/: Cargo.toml
apps/tg-bot/src/: config.rs  main.rs
apps/web/: Cargo.toml
apps/web/src/: main.rs
apps/web/static/: index.html  main.js  router.js  theme-init.js
apps/web/static/components/: follow-form.js  language-switcher.js  nav.js  one-time-secret.js  theme-switcher.js  ui.js  upgrade-form.js
apps/web/static/i18n/: config.js  index.js
apps/web/static/i18n/_tools/: _build_de_ru_ar_translations.py  _gen_catalog_data.py  _gen_ja_ko_catalogs.py  _gen_sharpside_i18n.py  _ja_ko_translation_data.py  _localize_de_ru_ar.py  _translation_patches.json  build_i18n_json_files.py  build_i18n_locales.py  i18n_es.json  i18n_fr.json  i18n_pt.json
apps/web/static/i18n/messages/: ar.js  de.js  en.js  es.js  fr.js  ja.js  ko.js  pt.js  ru.js  zh.js
apps/web/static/lib/: account.js  bff.js  client.js  clipboard.js  copier.js  follow.js  siwe.js  venue-hub.js  wallet-connect.js  watchlist.js
apps/web/static/pages/: connect.js  copy-history.js  credentials.js  daemon-key.js  dashboard.js  delegation.js  follows.js  home.js  identity.js  import.js  leaderboard.js  portfolio.js  settings.js  subscription.js  trader.js  wallet.js  watchlist.js
apps/web/static/store/: auth.js  theme.js
apps/web/static/styles/: base.css  tokens.css
arb_scan/: scan.py
crates/botfilter/: Cargo.toml
crates/botfilter/src/: lib.rs
crates/clob-auth/: Cargo.toml
crates/clob-auth/src/: lib.rs
crates/clob-auth/tests/fixtures/: type3_sdk_sign_only.json
crates/db/: Cargo.toml
crates/db/migrations/: 0001_create_schemas.sql  0002_raw_layer.sql  0003_entities.sql  0004_mapping.sql  0005_compute.sql  0006_monitor.sql  0007_ops.sql  0008_shadow.sql  0009_identity_perf_mview.sql  0010_account.sql  0011_user_venue_credentials.sql  0012_deposit_wallet.sql  0013_perf_periods.sql  0014_equity_curve_hourly.sql  0015_wallet_login.sql  0016_drop_email_auth.sql  0017_credential_kind.sql  0018_trades_backfilled_at.sql  0019_withdrawals.sql  0020_leaderboard_category.sql  0021_botfilter_seed.sql  0022_watchlist.sql  0023_polymarket_official_categories.sql  0024_official_pnl.sql  0025_redemptions.sql  0026_value_snapshot.sql  0027_follow_unique.sql  0028_follow_deleted_at.sql  0029_copy_order_dispatched_at.sql  0030_signal_outbox.sql  0031_copy_order_signal_id.sql  0032_migrate_percent_of_balance.sql  0033_copy_order_submission.sql  0034_copy_order_idempotency.sql  0035_jwt_denylist.sql  0036_copy_execution_unique.sql  0037_credential_passphrase_enc.sql  0038_credential_revoked.sql  0039_credential_archives.sql  0040_billing.sql  (+5 more)
crates/db/src/: error.rs  lib.rs  models.rs
crates/db/src/queries/: account.rs  billing.rs  identities.rs  mappings.rs  mod.rs  monitor.rs  ops.rs  outbox.rs  perf.rs  raw.rs  shadow.rs  traders.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs  similarity.rs  types.rs
crates/kms/: Cargo.toml
crates/kms/src/: lib.rs
crates/mapping/: Cargo.toml
crates/mapping/src/: exec.rs  lib.rs  similarity.rs  types.rs  unit.rs
crates/perf/: Cargo.toml
crates/perf/src/: equity.rs  lib.rs  metrics.rs  tags.rs  timeline.rs  types.rs
crates/shared/: Cargo.toml
crates/shared/src/: client_ip.rs  event.rs  follow.rs  jurisdiction.rs  lib.rs  order.rs  perf.rs  platform.rs  secrets.rs  session.rs  signal.rs  tag.rs  watchlist.rs
crates/venues/core/: Cargo.toml
crates/venues/core/src/: lib.rs  types.rs
crates/venues/polymarket/: Cargo.toml
crates/venues/polymarket/src/: client.rs  clob.rs  deposit.rs  dto.rs  lib.rs  onchain.rs  relayer.rs  wallet_batch.rs
crates/venues/polymarket/tests/: live_cancel_order.rs  live_order_status.rs  live_post_order.rs  live_provision.rs  migrate_archived_dw.rs
docs/: ARCHITECTURE.md  BOTFILTER_RULES.md  CHANNEL_A_CANARY.md  CHANNEL_A_SIGNING.md  DAEMON_ROADMAP.md  DATA_SOURCES.md  DEPLOY_CHECKLIST.md  F0_LANDING_CHECKLIST.md  FLOWS.md  FRONTEND_DESIGN.md  MULTI_PLATFORM.md  PERFORMANCE_PIPELINE.md  RUNBOOK_TG_BOT.md  (+7 more)
services/account/: Cargo.toml
services/account/src/: auth.rs  config.rs  deposit.rs  error.rs  main.rs  migrate.rs  rate_limit.rs  routes.rs  siwe.rs  state.rs
services/account/src/billing/: confirm.rs  mod.rs  routes.rs  worker.rs
services/account/tests/: jwt_revoke.rs  link_wallet.rs  wallet_login.rs
services/copier/: Cargo.toml
services/copier/src/: auth.rs  config.rs  error.rs  exec.rs  main.rs  metrics.rs  reclaim_worker.rs  reconcile_worker.rs  redeem_worker.rs  risk.rs  routes.rs  state.rs
services/follow/: Cargo.toml
services/follow/src/: auth.rs  config.rs  error.rs  main.rs  routes.rs  signal.rs  state.rs  watchlist.rs
services/gateway/: Cargo.toml
services/gateway/src/: auth.rs  config.rs  error.rs  main.rs  rate_limit.rs  state.rs
services/gateway/src/routes/: bff.rs  dev.rs  health.rs  mod.rs  proxy.rs
services/venue-hub/: Cargo.toml
services/venue-hub/src/: auth.rs  config.rs  error.rs  main.rs  metrics.rs  registry.rs  state.rs  worker_ticks.rs
services/venue-hub/src/routes/: health.rs  identities.rs  markets.rs  mod.rs  traders.rs  venues.rs
services/venue-hub/src/workers/: backfill.rs  hot.rs  identity.rs  ingest.rs  mapping.rs  mod.rs  official_pnl.rs  perf.rs  shadow.rs  signal_emit.rs  signal_replay.rs  trade_watch.rs
(+61 files in other folders)
