[package]
name = "sharpside-clob-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Polymarket CLOB V2 鉴权：L1 ClobAuth EIP-712 + L2 HMAC + V2 Order EIP-712 + ERC-7739 POLY_1271 wrap（移植自生产 clob-auth）"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
