[package]
name = "sharpside-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "跨 Venue 交易者身份链接（启发式相似度匹配），纯逻辑易测"

[dependencies]
sharpside-shared.workspace = true
sharpside-venues-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx = "0.5"
