[package]
name = "sharpside-kms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "KMS 抽象：DevKms（env 明文，dev/测试）+ AwsKms（占位 stub）。owner EOA 私钥 / L2 secret 加解密"

[dependencies]
thiserror.workspace = true
base64.workspace = true
tracing.workspace = true
aes-gcm = "0.10"
rand.workspace = true
zeroize.workspace = true
hex.workspace = true
