[package]
name = "sharpside-perf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "仓位重建 + 绩效计算（ROI/Sharpe/Sortino/回撤/DW/type-3），纯函数易测"

[dependencies]
sharpside-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx = "0.5"
