[package]
name = "sharpside-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sharpside 端到端 serde 类型：Platform / CopyOrder / TradeEvent / Performance / Tag / FollowConfig"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
