[package]
name = "sharpside-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "API 网关 + BFF：统一入口、鉴权（JWT + daemon_api_key）、限流、BFF 聚合"

[[bin]]
name = "sharpside-gateway"
path = "src/main.rs"

[dependencies]
sharpside-shared.workspace = true
sharpside-db.workspace = true
sqlx.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonwebtoken.workspace = true
governor.workspace = true
async-trait.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
