[package]
name = "sharpside-venue-hub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "多平台采集 + 市场映射 + 身份 + 绩效 + 热钥浮仓 + 影子校验"

[dependencies]
sharpside-shared.workspace = true
sharpside-db.workspace = true
sharpside-perf.workspace = true
sharpside-botfilter.workspace = true
sharpside-mapping.workspace = true
sharpside-identity.workspace = true
sharpside-venues-core.workspace = true
sharpside-venues-polymarket.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
rust_decimal.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
